--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ url: http://www.coderclimber.com
 baseurl: /algowayss_web
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
+title: Algoway System Solution
+email: contact@algowayss.co
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
